particle color correction and background change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
       #particles-js {
-        background-color: rgb(182, 25, 36);
+        background-color: #ffffff;
         position: absolute;
         top: 0;
         left: 0;
