more JSON tweaks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
       #particles-js {
-        background-color: #ffffff;
+        background-color: #221f1f;
         position: absolute;
         top: 0;
         left: 0;
