more json tweaking

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <style>
       #particles-js {
         background-color: #221f1f;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 50%;
         z-index: -1;
       }
     </style>
