--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>3Dy</title>
     <style>
       #particles-js {
         background-color: #221f1f;
@@ -12,11 +12,18 @@
         background-size: cover;
         background-position: 50% 50%;
         z-index: -1;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        outline: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background: transparent;
       }
     </style>
   </head>
   <body>
-    <h1>3Dy printing</h1>
+    <h1>3Dy Prototyping and 3d Printing</h1>
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
