--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         outline: 0;
         font-size: 100%;
         vertical-align: baseline;
+        background: transparent;
       }
     </style>
   </head>
