--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         outline: 0;
         font-size: 100%;
         vertical-align: baseline;
-        background: transparent;
       }
     </style>
   </head>
   <body>
-    <h1>3Dy Prototyping and 3d Printing</h1>
+    <h1>3Dy Prototyping Solutions</h1>
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
