--- a/index.html
+++ b/index.html
@@ -10,32 +10,8 @@
     <style>
       #particles-js {
         background-color: #221f1f;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
         z-index: -1;
         background-size: cover;
-      }
-      #secondhead {
-      }
-      h1 {
-        display: block;
-        align: center;
-        font-size: 3em;
-        margin-top: 0.67em;
-        margin-bottom: 0.67em;
-        font-weight: bold;
-      }
-      h2 {
-        display: block;
-        font-size: 2.5em;
-        margin-top: 0.83em;
-        margin-bottom: 0.83em;
-        margin-left: 0;
-        margin-right: 0;
-        font-weight: bold;
       }
     </style>
   </head>
@@ -44,16 +20,27 @@
     <div class="w3-top">
       <div class="w3-bar w3-white w3-wide w3-padding w3-card">
         <a href="#home" class="w3-bar-item w3-button"
-          ><b>3Dy</b> Prototypes/3d Printing</a
+          ><b>3Dy</b> 3D Printing/Prototypes</a
         >
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
-          <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+          <a href="#projects" class="w3-bar-item w3-button">Services</a>
           <a href="#about" class="w3-bar-item w3-button">About</a>
           <a href="#contact" class="w3-bar-item w3-button">Contact</a>
         </div>
       </div>
     </div>
+    <!-- Header -->
+    <header id="particles-js">
+      <div class="w3-display-middle w3-margin-top w3-center">
+        <h1 class="w3-xxlarge w3-text-white">
+          <span class="w3-padding w3-black w3-opacity-min"
+            ><b>3D Printing</b></span
+          >
+          <span class="w3-hide-small w3-text-light-grey">Prototypes</span>
+        </h1>
+      </div>
+    </header>
     <!-- Particles script -->
     <div id="particles-js"></div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -62,5 +49,76 @@
         console.log("callback - particles.js config loaded");
       });
     </script>
-  </body>
+    <!-- page content -->
+    <!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+
+  <!-- Project Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Services</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">FDM 3D Printing</div>
+        <img src="https://images.monoprice.com/productlargeimages/138602.jpg" alt="3D Printer" style="width:120%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">SLA 3D Printing</div>
+        <img src="https://www.multistation.com/voy_content/uploads/sites/4/2018/08/formlabs-form-2.jpg" alt="FormLabs Form2" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Mold Casting</div>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRHxH5LdqzRBSWMs3B0vVGz5AzReXnoCuSEpw6GKZqgJxE1Q61" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">CAD Modeling</div>
+        <img src="https://i.ytimg.com/vi/dfZulp2OPFM/maxresdefault.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+  </div>
+  <!-- About Section -->
+   <div class="w3-container w3-padding-32" id="about">
+     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+     <p>Whether you have a model and need a 3D print, or have and idea and want to bring it to life.
+     </p>
+   </div>
+
+   <div class="w3-row-padding w3-grayscale">
+     <div class="w3-col l3 m6 w3-margin-bottom">
+       <img src="https://media.licdn.com/dms/image/C4D03AQGbo1E8q4vf8Q/profile-displayphoto-shrink_100_100/0?e=1551312000&v=beta&t=4D8MGW8j3njiqxhKOUcPnHpVRmdRqHKd3y9t8zF6-RM" alt="John" style="width:50%">
+       <h3>Derek Yesmunt</h3>
+       <p class="w3-opacity">Owner</p>
+       <p>derek@3dy.io</p>
+       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
+     </div>
+     <!-- Contact Section -->
+       <div class="w3-container w3-padding-32" id="contact">
+         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
+         <p>Lets get in touch and talk about your next project.</p>
+         <form action="/action_page.php" target="_blank">
+           <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+           <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
+           <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
+           <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
+           <button class="w3-button w3-black w3-section" type="submit">
+             <i class="fa fa-paper-plane"></i> SEND MESSAGE
+           </button>
+         </form>
+       </div>
+
+   </div>
+   <!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Built by <a href="www.linkedin.com/in/derek-yesmunt-06269b28" title="W3.CSS" target="_blank" class="w3-hover-text-green">me.</a></p>
+</footer>
+
+</body>
 </html>
