first gen form send

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         background-size: cover;
       }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.3.1.slim.min.js"   integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="   crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Navbar (sit on top) -->
@@ -43,12 +45,6 @@
     </header>
     <!-- Particles script -->
     <div id="particles-js"></div>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script>
-      particlesJS.load("particles-js", "assets/particles.json", function() {
-        console.log("callback - particles.js config loaded");
-      });
-    </script>
     <!-- page content -->
     <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
@@ -87,7 +83,8 @@
   <!-- About Section -->
    <div class="w3-container w3-padding-32" id="about">
      <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-     <p>Whether you have a model and need a 3D print, or have and idea and want to bring it to life.
+     <p>Whether you have a model and need a 3D print, or need a low volume production solution, or have an idea that you want to bring to life, I am here to help.
+
      </p>
    </div>
 
@@ -103,7 +100,7 @@
        <div class="w3-container w3-padding-32" id="contact">
          <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
          <p>Lets get in touch and talk about your next project.</p>
-         <form action="/action_page.php" target="_blank">
+         <form id="test-form">
            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
            <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
            <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
@@ -117,8 +114,29 @@
    </div>
    <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Built by <a href="www.linkedin.com/in/derek-yesmunt-06269b28" title="W3.CSS" target="_blank" class="w3-hover-text-green">me.</a></p>
+  <p>Built by <a href="www.linkedin.com/in/derek-yesmunt-06269b28" title="Derek" target="_blank" class="w3-hover-text-green">me.</a></p>
 </footer>
+<script>
+
+particlesJS.load("particles-js", "assets/particles.json", function() {
+  console.log("callback - particles.js config loaded");
+});
+
+var $form = $('form#test-form'),
+    url = 'https://script.google.com/macros/s/AKfycbyZVEWAHsRmNiuu_R6zq0eOF90BnBbpC6YIsBQD1v-QyRGYZRk/exec'
+
+$('#submit-form').on('submit', function(e) {
+  e.preventDefault();
+  var jqxhr = $.ajax({
+    url: url,
+    method: "GET",
+    dataType: "json",
+    data: $form.serializeObject()
+  }).success(
+    // do something
+  );
+})
+</script>
 
 </body>
 </html>
