about verbage amended

--- a/index.html
+++ b/index.html
@@ -92,7 +92,16 @@
   <!-- About Section -->
    <div class="w3-container w3-padding-32" id="about">
      <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-     <p>Offering 3D printing and molding to provide functional prototypes in a range of materials including rigid, durable, tough, high temp., and even ceramic.
+     <p>Let me help bring your ideas to life!</p>
+<p>
+As a quick background, I am a biomedical engineer working in the automotive industry with a passion for developing creative solutions and ideas.
+I have experience working with several different modeling packages (e.g. Autodesk Fusion 360), and lately, have focused efforts on optimizing space on Cryptocurrency mining rigs through designing and printing custom GPU mounts.
+That being said, I'm no stranger to the occasional printing of cat figurines for my girlfriend's work desk.</p>
+<p>
+I have a Fused Deposition Modeling (FDM) Printer and a Form 2 Stereolithography (SLA) Printer, awarding me the ability to print strong and detailed models with quality surface finish. 17 available resins help create functional prototype parts with the required material characteristics (i.e. rigid, durable, tough, flexible, and high temp).
+For more information on available materials and applications, please refer to the Formlabs website:
+https://formlabs.com/materials/.</p>
+<p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, I'm happy to help!
      </p>
    </div>
 
