--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ https://formlabs.com/materials/.</p>
 
    <div class="w3-row-padding w3-grayscale">
      <div class="w3-col l3 m6 w3-margin-bottom">
-       <img src="https://media.licdn.com/dms/image/C4D03AQGbo1E8q4vf8Q/profile-displayphoto-shrink_100_100/0?e=1551312000&v=beta&t=4D8MGW8j3njiqxhKOUcPnHpVRmdRqHKd3y9t8zF6-RM" alt="John" style="width:50%">
+       <img src="https://media.licdn.com/dms/image/C4D03AQGbo1E8q4vf8Q/profile-displayphoto-shrink_100_100/0?e=1551312000&v=beta&t=4D8MGW8j3njiqxhKOUcPnHpVRmdRqHKd3y9t8zF6-RM" alt="Derek" style="width:30%">
        <h3>Derek Yesmunt</h3>
        <p class="w3-opacity">Owner</p>
        <p>derek@3dy.io</p>
@@ -137,7 +137,7 @@ https://formlabs.com/materials/.</p>
    </div>
    <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Built by <a href="www.linkedin.com/in/derek-yesmunt-06269b28" title="Derek" target="_blank" class="w3-hover-text-green">me.</a></p>
+  <p>Built by <a href="https://www.linkedin.com/in/derek-yesmunt-06269b28" title="Derek" target="_blank" class="w3-hover-text-green">me.</a></p>
 </footer>
 <script>
 
