fix title position and size

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         background-color: #221f1f;
         z-index: -1;
         background-size: cover;
+        position: relative;
+      }
+      h1 {
+        font-size: 36px;
+      }
+      @media (max-width: 500px){
+        h1 {
+        font-size: 24px;
+      }
+      h3 {
+        font-size: 20px;
+      }
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -44,7 +56,7 @@
     <!-- Header -->
     <header id="particles-js">
       <div class="w3-display-middle w3-margin-top w3-center">
-        <h1 class="w3-xxlarge w3-text-white">
+        <h1 class="w3-text-white">
           <span class="w3-padding w3-black w3-opacity-min"
             ><b>3D Printing</b></span
           >
