--- a/index.html
+++ b/index.html
@@ -17,26 +17,31 @@
     <title>3Dy</title>
 
     <style>
+      .header {
+        position: relative;
+      }
+
       #particles-js {
         background-color: #221f1f;
         z-index: -1;
         background-size: cover;
-        position: relative;
       }
+
       h1 {
         font-size: 36px;
       }
+
       @media (max-width: 500px){
         h1 {
-        font-size: 24px;
-      }
-      h3 {
-        font-size: 20px;
-      }
+          font-size: 24px;
+        }
+        h3 {
+          font-size: 20px;
+        }
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script   src="https://code.jquery.com/jquery-3.3.1.slim.min.js"   integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"   integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="   crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Navbar (sit on top) -->
@@ -54,7 +59,8 @@
       </div>
     </div>
     <!-- Header -->
-    <header id="particles-js">
+    <header class="header">
+      <div id="particles-js"></div>
       <div class="w3-display-middle w3-margin-top w3-center">
         <h1 class="w3-text-white">
           <span class="w3-padding w3-black w3-opacity-min"
