--- a/index.html
+++ b/index.html
@@ -21,6 +21,48 @@
         position: relative;
       }
 
+      .quotebutton {
+	-moz-box-shadow:inset 0px 1px 25px -1px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 25px -1px #ffffff;
+	box-shadow:inset 0px 1px 25px -1px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+	background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf',GradientType=0);
+	background-color:#ededed;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#1f1e1f;
+	font-family:Arial;
+	font-size:22px;
+	font-weight:bold;
+	font-style:italic;
+	padding:6px 44px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.quotebutton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+	background:-moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed',GradientType=0);
+	background-color:#dfdfdf;
+}
+.quotebutton:active {
+	position:relative;
+	top:1px;
+}
+
       #particles-js {
         background-color: #221f1f;
         z-index: -1;
@@ -68,6 +110,7 @@
           >
           <span class="w3-hide-small w3-text-light-grey">Prototypes</span>
         </h1>
+        <a href="printcalc.html" class="quotebutton">Instant Quote</a>
       </div>
     </header>
     <!-- Particles script -->
