--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@ I have experience working with several different modeling packages (e.g. Autodes
 That being said, I'm no stranger to the occasional printing of cat figurines for my girlfriend's work desk.</p>
 <p>
 I have a Fused Deposition Modeling (FDM) Printer and a Form 2 Stereolithography (SLA) Printer, awarding me the ability to print strong and detailed models with quality surface finish. 17 available resins help create functional prototype parts with the required material characteristics (i.e. rigid, durable, tough, flexible, and high temp).
-For more information on available materials and applications, please refer to the Formlabs website:
-https://formlabs.com/materials/.</p>
+For more information on available materials and applications, please refer to the Formlabs <a href="https://formlabs.com/materials/">website</a>.</p>
 <p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, I'm happy to help!
      </p>
    </div>
