--- a/printcalc.html
+++ b/printcalc.html
@@ -4,23 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <title>3Dy</title>
+  <style>
+    .header {
+      height: 56px;
+    }
+    .main {
+      height: 100vh;
+      margin-top: 56px;
+    }
+
+    iframe {
+      border: none;
+      padding-top: 10px;
+    }
+  </style>
 </head>
-<style>
-  .main {
-    height: 100vh;
-  }
-</style>
 <body>
+  <div class="w3-top">
+    <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+      <a href="#home" class="w3-bar-item w3-button"
+        ><b>3Dy</b> 3D Printing/Prototypes</a
+      >
+      <!-- Float links to the right. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+        <a href="index" class="w3-bar-item w3-button">Services</a>
+        <a href="index" class="w3-bar-item w3-button">About</a>
+        <a href="index" class="w3-bar-item w3-button">Contact</a>
+      </div>
+    </div>
+  </div>
+
   <div class="main">
     <iframe
       id="iframe1"
       name="iframe1"
-      src="https://www.3dabax.com/calc/index.php?vendor=188"
       height="100%"
       width="100%"
-      allowtransparency="true"
-      allowfullscreen="true"
-      frameborder="0"
+      src="https://www.3dabax.com/calc/index.php?vendor=188"
     ></iframe>
   </div>
 </body>
