--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ For more information on available materials and applications, please refer to th
      <div class="w3-col l3 m6 w3-margin-bottom">
        <img src="assets/IMG_2068.jpeg" alt="Derek" style="width:50%">
        <h3>Derek Yesmunt</h3>
-       <p class="w3-opacity">Owner</p>
+       <p class="w3-opacity">Technical Director</p>
        <p>derek@3dy.io</p>
        <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
      </div>
