big switch to new site

--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"></span>
+							<img src="images/3DY Printing_For Graphic Use_Transparent Background.png">
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>3D printing and prototyping</h1>
+								<p>Get an online instant quote for your model or send me an email if your project has higher complexity critical surfaces for better results.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="printcalc.html">Quote</a></li>
+								<li><a href="#services">Services  </a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -52,32 +51,36 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+							<article id="services">
+								<h2 class="major">Services</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								I have a Fused Deposition Modeling (FDM) Printer and a Form 2 Stereolithography (SLA) Printer, awarding me the ability to print strong and detailed models with quality surface finish. 17 available resins help create functional prototype parts with the required material characteristics (i.e. rigid, durable, tough, flexible, and high temp).
+For more information on available materials and applications, please refer to the Formlabs <a href="https://formlabs.com/materials/">website</a>.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/IMG_2068.jpeg" alt="Derek" /></span>
+								<p>As a quick background, I am a biomedical engineer working in the automotive industry with a passion for developing creative solutions and ideas.
+									I have experience working with several different modeling packages (e.g. Autodesk Fusion 360), and lately, have focused efforts on optimizing space on Cryptocurrency mining rigs through designing and printing custom GPU mounts.
+									That being said, I'm no stranger to the occasional printing of cat figurines for my girlfriend's work desk.</p>
+									<p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, I'm happy to help!
+									</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form class="gform" method="POST" data-email="derek@3dy.io" action="https://script.google.com/macros/s/AKfycbwHdY0l-AP3xyJP9HBhDJJnFpynvs9lF7YxwgmkPhB3J3ceyw01/exec">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" name="name" id="Name" />
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" name="email" id="Email" />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
@@ -89,12 +92,14 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
+								<!--
 								<ul class="icons">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
+								-->
 							</article>
 
 						<!-- Elements -->
@@ -287,19 +292,24 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ul>
 								</section>
 
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
+								<!-- <section> -->
+									<!-- <h3 class="major">Form</h3>
+									<form  class="gform" method="POST" data-email="derek@3dy.io" action="https://script.google.com/macros/s/AKfycbwHdY0l-AP3xyJP9HBhDJJnFpynvs9lF7YxwgmkPhB3J3ceyw01/exec">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+												<input type="text" name="demo-name" id="demo-name" placeholder="Name" required name="Name"/>
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+												<input type="text" name="demo-email" id="demo-email" placeholder="Email" required name="Email"/>
 											</div>
 											<div class="field">
+												<label for="demo-name">Subject</label>
+												<input type="text" name="demo-name" id="demo-name" placeholder="Subject" required name="Subject"/>
+											</div>
+							
+											 <div class="field">
 												<label for="demo-category">Category</label>
 												<select name="demo-category" id="demo-category">
 													<option value="">-</option>
@@ -308,7 +318,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 													<option value="1">Administration</option>
 													<option value="1">Human Resources</option>
 												</select>
-											</div>
+											</div> 
 											<div class="field half">
 												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
 												<label for="demo-priority-low">Low</label>
@@ -324,18 +334,18 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<div class="field half">
 												<input type="checkbox" id="demo-human" name="demo-human" checked>
 												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
+											</div> --->
+											<!-- <div class="field">
 												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+												<textarea name="demo-message" id="demo-message" placeholder="Comment" rows="6" required name="Comment"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
 											<li><input type="submit" value="Send Message" class="primary" /></li>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
-									</form>
-								</section>
+									</form> --> 
+								<!-- </section> -->
 
 							</article>
 
@@ -343,7 +353,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 3Dy. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
@@ -357,6 +367,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script data-cfasync="false" type="text/javascript" src="assets/js/form-submission-handler.js"></script>
 
 	</body>
 </html>
