--- a/printcalc.html
+++ b/printcalc.html
@@ -24,15 +24,15 @@
 <body>
   <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-      <a href="#home" class="w3-bar-item w3-button"
+      <a href="index.html" class="w3-bar-item w3-button"
         ><b>3Dy</b> 3D Printing/Prototypes</a
       >
-      <!-- Float links to the right. Hide them on small screens -->
+      <!-- Float links to the right. Hide them on small screens 
       <div class="w3-right w3-hide-small">
         <a href="index" class="w3-bar-item w3-button">Services</a>
         <a href="index" class="w3-bar-item w3-button">About</a>
         <a href="index" class="w3-bar-item w3-button">Contact</a>
-      </div>
+      </div>-->
     </div>
   </div>
 
