--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ For more information on available materials and applications, please refer to th
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/IMG_2068.jpeg" alt="Derek" /></span>
-								<p>As a quick background, I am a biomedical engineer working in the automotive industry with a passion for developing creative solutions and ideas.
+								<p>I am a biomedical engineer working in the automotive industry with a passion for developing creative solutions and ideas.
 									I have experience working with several different modeling packages (e.g. Autodesk Fusion 360), and lately, have focused efforts on optimizing space on Cryptocurrency mining rigs through designing and printing custom GPU mounts.
 									That being said, I'm no stranger to the occasional printing of cat figurines for my girlfriend's work desk.</p>
 									<p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, I'm happy to help!
