--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>3D printing and prototyping</h1>
-								<p>Get an online instant quote for your model or send me an email if your project has higher complexity critical surfaces for better results.</p>
+								<p>Get an instant quote online or send me an email to discuss your next project.</p>
 							</div>
 						</div>
 						<nav>
