--- a/index.html
+++ b/index.html
@@ -54,18 +54,16 @@
 							<article id="services">
 								<h2 class="major">Services</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								I have a Fused Deposition Modeling (FDM) Printer and a Form 2 Stereolithography (SLA) Printer, awarding me the ability to print strong and detailed models with quality surface finish. 17 available resins help create functional prototype parts with the required material characteristics (i.e. rigid, durable, tough, flexible, and high temp).
+								Fused Deposition Modeling (FDM) and a Form 2 Stereolithography (SLA) print strong and detailed models with quality surface finish. 17 available resins help create functional prototype parts with the required material characteristics (i.e. rigid, durable, tough, flexible, and high temp).
 For more information on available materials and applications, please refer to the Formlabs <a href="https://formlabs.com/materials/">website</a>.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/IMG_2068.jpeg" alt="Derek" /></span>
-								<p>I am a biomedical engineer working in the automotive industry with a passion for developing creative solutions and ideas.
-									I have experience working with several different modeling packages (e.g. Autodesk Fusion 360), and lately, have focused efforts on optimizing space on Cryptocurrency mining rigs through designing and printing custom GPU mounts.
-									That being said, I'm no stranger to the occasional printing of cat figurines for my girlfriend's work desk.</p>
-									<p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, I'm happy to help!
+								<span class="image main"><img src="images/skull.jpeg" alt="3D printed part" /></span>
+								<p>Fast industry standard 3D printing and prototyping with the engineering expertise to help you find the best solution for your project.</p>
+									<p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, were here to help!
 									</p>
 							</article>
 
