about and service photos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>3D printing and prototyping</h1>
-								<p>Get an instant quote online or send me an email to discuss your next project.</p>
+								<p>Get an instant quote online or send us an email to discuss your next project.</p>
 							</div>
 						</div>
 						<nav>
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="services">
 								<h2 class="major">Services</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/skull.jpg" alt="" /></span>
 								Fused Deposition Modeling (FDM) and a Form 2 Stereolithography (SLA) print strong and detailed models with quality surface finish. 17 available resins help create functional prototype parts with the required material characteristics (i.e. rigid, durable, tough, flexible, and high temp).
 For more information on available materials and applications, please refer to the Formlabs <a href="https://formlabs.com/materials/">website</a>.</p>
 							</article>
@@ -61,8 +61,8 @@ For more information on available materials and applications, please refer to th
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/skull.jpeg" alt="3D printed part" /></span>
-								<p>Fast industry standard 3D printing and prototyping with the engineering expertise to help you find the best solution for your project.</p>
+								<span class="image main"><img src="images/car.jpg" alt="3D printed part" /></span>
+								<p>Based out of the Metro Detroit and shipping nation wide. Fast industry standard 3D printing and prototyping with the engineering expertise to help you find the best solution for your project.</p>
 									<p>Whether you're in need of high quality prints for pre-production/production needs, or just looking for a new media to express your creative ideas, were here to help!
 									</p>
 							</article>
