added email on main

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<div class="inner">
 								<h1>3D printing and prototyping</h1>
 								<p>Get an instant quote online or send us an email to discuss your next project.</p>
+								<p>PRINT@3DY.IO</p>
 							</div>
 						</div>
 						<nav>
